backend-cud/kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-cud
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend-cud
  template:
    metadata:
      labels:
        app: backend-cud
    spec:
      containers:
        - name: backend-cud
          image: junwon1131/s208-backend-cud-kubernetes:latest
          imagePullPolicy: IfNotPresent # 또는 Never
          ports:
            - containerPort: 8080
