backend-cud/kubernetes/stress.yml
apiVersion: v1
kind: Pod
metadata:
  name: stress-pod
spec:
  containers:
    - name: stress-container
      image: polinux/stress
      command: ["stress", "--cpu", "4"]
