backend-cud/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-cud-service
spec:
  selector:
    app: backend-cud
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
